[metadata]
name = adeles
version = 1
author = Mathé Hertogh
author_email = m.c.hertogh@gmail.com
description = A SageMath package for computing with adèles and idèles over number fields
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/mathehertogh/adeles
license = GPLv2+
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
    Intended Audience :: Science/Research,
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = adeles
python_requires = >= 3
install_requires =
    sage >= 9.0
